--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: black;
+    color: #fff;
 }
 
 .clock{
