style: added footer

--- a/style.css
+++ b/style.css
@@ -21,3 +21,9 @@ body{
     text-align: center;
     font-family: monospace;
 }
+
+footer{
+    text-align: center;
+    font-family: monospace;
+    color: rgba(168, 165, 165, 0.342);
+}
